--- a/locales/fa.json
+++ b/locales/fa.json
@@ -20,6 +20,7 @@
     "title": "دانش‌آموز پایه دوازدهم | علاقه‌مند به هوش مصنوعی و برنامه‌نویسی | جویای کارآموزی",
     "description": "دانش‌آموز کنجکاو با علاقه به AI و وب؛ من از سال 2021 برنامه‌نویسی می‌کنم؛ تمرکز روی پروژه‌های کوچک کاربردی و یادگیری مستمر.",
     "contact": "تماس با من",
+    "view": "مشاهده CV",
     "download": "دانلود CV",
     "metric": {
       "experience": "سال تجربه برنامه‌نویسی",
@@ -32,7 +33,7 @@
     "heading": "درباره من",
     "text": {
       "intro": "من محمدرضا عابدین‌پور، دانش‌آموز پایه دوازدهم هستم که به دنیای تکنولوژی و برنامه‌نویسی علاقه‌مندم. از کودکی کنجکاو یادگیری چیزهای جدید بودم و این کنجکاوی مرا به سمت برنامه‌نویسی و هوش مصنوعی کشانده است.",
-      "experience": "من از سال 2021 برنامه‌نویسی می‌کنم و در این مدت تجربه‌های ارزشمندی در کار تیمی و حل مسئله کسب کرده‌ام. پروژه‌هایم معمولاً بر روی ایجاد راه‌حل‌های کاربردی و یادگیری تکنولوژی‌های جدید متمرکز است."
+      "experience": "من از سال 2021 برنامه‌نویسی می‌کنم و در این مدت تجربه‌های ارزشمندی در برنامه نویسی و حل مسئله کسب کرده‌ام. پروژه‌هایم معمولاً بر روی ایجاد راه‌حل‌های کاربردی و یادگیری تکنولوژی‌های جدید متمرکز است."
     },
     "stats": {
       "heading": "آمار و دستاوردها",
@@ -47,8 +48,8 @@
         "description": "همیشه در حال یادگیری تکنولوژی‌های جدید"
       },
       "teamwork": {
-        "title": "کار تیمی",
-        "description": "تجربه همکاری در پروژه‌های گروهی"
+        "title": "حل مسئله های روزمره",
+        "description": "ایجاد اتوماسیون های مختلف برای کارهای تکراری"
       },
       "innovation": {
         "title": "تمرکز بر نوآوری",
@@ -59,6 +60,167 @@
   "skills": {
     "title": "مهارت‌ها",
     "heading": "مهارت‌ها",
+    "experience_text": "۳+ سال تجربه در توسعه نرم‌افزار",
+    "sliding": {
+      "python": "Python",
+      "web": "Web Development",
+      "ai": "AI Development",
+      "telegram": "Telegram Bots",
+      "django": "Django",
+      "sql": "SQL/MySQL",
+      "git": "Git & GitHub",
+      "prompt": "Prompt Engineering",
+      "scraping": "Web Scraping",
+      "deployment": "Deployment",
+      "arduino": "Arduino",
+      "flutter": "Flutter",
+      "photoshop": "Photoshop",
+      "video": "Video Editing",
+      "ui": "UI/UX Design",
+      "office": "Microsoft 365"
+    },
+    "hover": {
+      "experience_level": "سطح تجربه",
+      "related_projects": "پروژه‌های مرتبط"
+    },
+    "skillsData": {
+      "python": {
+        "title": "برنامه‌نویسی Python",
+        "icon": "🐍",
+        "level": "متوسط",
+        "experienceText": "۳+ سال",
+        "description": "برنامه‌نویسی تعاملی، توسعه بازی‌ها، اتوماسیون و مبانی علوم داده. تجربه کار با کتابخانه‌های مختلف Python برای پروژه‌های عملی و کاربردی.",
+        "projects": ["چت‌بات هوشمند", "ربات تلگرام", "وب اسکرپینگ", "اتوماسیون"]
+      },
+      "web": {
+        "title": "توسعه وب",
+        "icon": "🌐",
+        "level": "متوسط",
+        "experienceText": "۳+ سال",
+        "description": "توسعه وب ریسپانسیو با HTML، CSS و JavaScript. طراحی رابط‌های کاربری مدرن و تعاملی با تمرکز بر استانداردهای وب و تجربه کاربری بهینه.",
+        "projects": ["وبسایت شخصی", "وبلاگ مدرسه", "پنل ادمین", "رابط کاربری"]
+      },
+      "ai": {
+        "title": "توسعه هوش مصنوعی",
+        "icon": "🤖",
+        "level": "قوی",
+        "experienceText": "۲+ سال",
+        "description": "توسعه با کمک هوش مصنوعی با استفاده از Cursor، GitHub Copilot و ChatGPT برای کدنویسی، بررسی کد، نوشتن تست‌ها و مستندات.",
+        "projects": ["چت‌بات AI", "ایجنت تلگرام", "پرامپت انجینیرینگ", "کد ریویو"]
+      },
+      "telegram": {
+        "title": "ربات‌های تلگرام",
+        "icon": "📱",
+        "level": "قوی",
+        "experienceText": "۳+ ماه",
+        "description": "توسعه ربات‌های تلگرام هوشمند، webhook ها و سیستم‌های زمان‌بندی. ایجاد اتوماسیون‌های کاربردی برای بهبود جریان کار.",
+        "projects": ["ایجنت فروش", "ربات پشتیبانی", "اتوماسیون", "داشبورد وب"]
+      },
+      "django": {
+        "title": "فریمورک Django",
+        "icon": "🎯",
+        "level": "متوسط",
+        "experienceText": "۲+ سال",
+        "description": "توسعه اپلیکیشن‌های وب با Django، معماری MVC و یکپارچه‌سازی پایگاه داده. ساخت سیستم‌های مدیریت محتوا و API های RESTful.",
+        "projects": ["چت‌بات وب‌اپ", "سیستم وبلاگ", "پنل مدیریت", "API سرویس"]
+      },
+      "sql": {
+        "title": "SQL و پایگاه داده",
+        "icon": "🗄️",
+        "level": "متوسط",
+        "experienceText": "۲+ سال",
+        "description": "طراحی اسکیمای پایگاه داده و نوشتن کوئری‌های پیچیده. کار با MySQL و مدیریت داده‌های ساختاریافته.",
+        "projects": ["پایگاه داده کاربران", "سیستم احراز هویت", "مدیریت محتوا", "گزارش‌گیری"]
+      },
+      "git": {
+        "title": "Git و GitHub",
+        "icon": "📊",
+        "level": "متوسط",
+        "experienceText": "۱+ سال",
+        "description": "مدیریت نسخه‌ها با Git، کار با شاخه‌ها و Pull Request ها. همکاری تیمی و مدیریت پروژه‌های کد منبع باز.",
+        "projects": ["مدیریت پروژه", "همکاری تیمی", "کد ریویو", "CI/CD"]
+      },
+      "prompt": {
+        "title": "پرامپت انجینیرینگ",
+        "icon": "💬",
+        "level": "متوسط",
+        "experienceText": "۱+ سال",
+        "description": "پرامپت نویسی با ChatGPT، Cursor و Codex. طراحی دستورالعمل‌های مؤثر برای دریافت بهترین نتایج از مدل‌های هوش مصنوعی.",
+        "projects": ["چت‌بات هوشمند", "ایجنت AI", "کد جنریتور", "مستندسازی"]
+      },
+      "scraping": {
+        "title": "وب اسکرپینگ",
+        "icon": "🕷️",
+        "level": "متوسط",
+        "experienceText": "۲+ ماه",
+        "description": "جمع‌آوری داده از وب‌سایت‌ها با استفاده از Python و کتابخانه‌های scraping. استخراج اطلاعات ساختاریافته و پردازش داده‌های آنلاین.",
+        "projects": ["جمع‌آوری قیمت", "اخبار خودکار", "مانیتورینگ", "تحلیل داده"]
+      },
+      "deployment": {
+        "title": "استقرار پروژه",
+        "icon": "🚀",
+        "level": "متوسط",
+        "experienceText": "۳+ ماه",
+        "description": "استقرار پروژه‌ها روی shared hosting و VPS. تنظیم دامنه، SSL و webhook های تلگرام. مدیریت سرور و بهینه‌سازی عملکرد.",
+        "projects": ["استقرار وب‌اپ", "تنظیم سرور", "SSL و دامنه", "مانیتورینگ"]
+      },
+      "deploy": {
+        "title": "استقرار پروژه",
+        "icon": "🚀",
+        "level": "متوسط",
+        "experienceText": "۳+ ماه",
+        "description": "استقرار پروژه‌ها روی shared hosting و VPS. تنظیم دامنه، SSL و webhook های تلگرام. مدیریت سرور و بهینه‌سازی عملکرد.",
+        "projects": ["استقرار وب‌اپ", "تنظیم سرور", "SSL و دامنه", "مانیتورینگ"]
+      },
+      "arduino": {
+        "title": "Arduino و IoT",
+        "icon": "🔧",
+        "level": "مبتدی",
+        "experienceText": "۱+ سال",
+        "description": "برنامه‌نویسی میکروکنترلرها، کار با سنسورها (LM35، Ultrasonic) و پروژه‌های اینترنت اشیا. ساخت سیستم‌های تعاملی و اتوماسیون سخت‌افزاری.",
+        "projects": ["سنسور دما", "فاصله‌سنج", "اتوماسیون خانه", "IoT پروژه"]
+      },
+      "flutter": {
+        "title": "توسعه Flutter",
+        "icon": "📱",
+        "level": "مبتدی",
+        "experienceText": "۲+ ماه",
+        "description": "توسعه اپلیکیشن‌های موبایل با Flutter. ایجاد رابط‌های کاربری زیبا و عملکرد بالا برای پلتفرم‌های Android و iOS.",
+        "projects": ["اپ موبایل", "رابط کاربری", "کراس پلتفرم", "پروتوتایپ"]
+      },
+      "photoshop": {
+        "title": "Photoshop و طراحی",
+        "icon": "🎨",
+        "level": "متوسط",
+        "experienceText": "۲+ سال",
+        "description": "روتوش عکس‌ها، طراحی گرافیکی و ویرایش تصاویر. کار با ابزارهای پیشرفته فتوشاپ برای ایجاد محتوای بصری حرفه‌ای.",
+        "projects": ["روتوش عکس", "طراحی لوگو", "بنر تبلیغاتی", "UI موکاپ"]
+      },
+      "video": {
+        "title": "ویرایش ویدیو",
+        "icon": "🎬",
+        "level": "متوسط",
+        "experienceText": "۶+ ماه",
+        "description": "ویرایش ویدیو با CapCut، ساخت محتوای یوتیوب و تولید ویدیوهای آموزشی. ترکیب صدا، تصویر و افکت‌های بصری.",
+        "projects": ["ویدیو یوتیوب", "محتوای آموزشی", "تیزر تبلیغاتی", "ادیت موزیک"]
+      },
+      "ui": {
+        "title": "طراحی UI/UX",
+        "icon": "🎨",
+        "level": "متوسط",
+        "experienceText": "۱+ سال",
+        "description": "طراحی رابط کاربری و تجربه کاربری. ایجاد موکاپ‌ها، وایرفریم‌ها و پروتوتایپ‌های تعاملی برای وب و موبایل.",
+        "projects": ["طراحی وب‌سایت", "اپ موبایل", "داشبورد", "لندینگ پیج"]
+      },
+      "office": {
+        "title": "Microsoft 365",
+        "icon": "📊",
+        "level": "متوسط",
+        "experienceText": "۲+ سال",
+        "description": "استفاده از مجموعه نرم‌افزارهای Microsoft 365 برای بهره‌وری اداری. کار با Word، Excel، PowerPoint و ابزارهای همکاری تیمی.",
+        "projects": ["مستندسازی", "گزارش‌نویسی", "ارائه", "تحلیل داده"]
+      }
+    },
     "categories": {
       "core": "Core",
       "tools": "Tools & Platforms",
@@ -258,35 +420,18 @@
     ]
   },
   "achievements": {
-    "title": "افتخارات",
+    "title": "افتخارات و گواهینامه ها",
     "heading": "افتخارات و گواهینامه‌ها",
     "sharif": {
       "title": "دانشگاه صنعتی شریف",
       "ranking": "رتبه 3 در ایران و 548 در جهان",
-      "description": "من جزو 3 دانشجوی برتر دوره‌های دانشگاه صنعتی شریف بودم",
+      "description": "من 2 دوره جزو بهترین دانش جویان دوره های دانش آموزی دانشگاه شریف بودم",
       "rank_iran": "رتبه در ایران",
       "rank_global": "رتبه در جهان"
     },
     "certificate": {
       "details": "جزئیات"
-    },
-    "items": [
-      {
-        "title": "رتبه برتر منطقه",
-        "description": "مقام اول در مسابقات علمی منطقه",
-        "year": "2023"
-      },
-      {
-        "title": "شرکت در المپیاد کامپیوتر",
-        "description": "شرکت در مرحله استانی المپیاد کامپیوتر",
-        "year": "2023"
-      },
-      {
-        "title": "مقام تیم رباتیک مدرسه",
-        "description": "مقام دوم در مسابقات رباتیک دانش‌آموزی",
-        "year": "2022"
-      }
-    ]
+    }
   },
   "education": {
     "title": "تحصیلات",
@@ -294,10 +439,10 @@
     "highschool": {
       "title": "دبیرستان دکتر علی‌شریعتی",
       "subtitle": "دانش‌آموز پایه دوازدهم",
-      "description": "از سال 2021 تا کنون در رشته ریاضی و فیزیک"
+      "description": "از سال 2022 تا کنون در رشته ریاضی و فیزیک"
     },
     "school": "دبیرستان دکتر علی‌شریعتی",
-    "period": "2021 - 2024",
+    "period": "2021 - 2025",
     "grade": "پایه دهم تا دوازدهم - رشته ریاضی و فیزیک",
     "details": [
       "عضو فعال تیم رباتیک",
@@ -327,7 +472,7 @@
     },
     "location": {
       "title": "آدرس",
-      "address": "تهران، ایران"
+      "address": "رشت، ایران"
     },
     "subtitle": "بیایید با هم صحبت کنیم",
     "description": "برای کارآموزی، همکاری پروژه‌ای یا هر سوال دیگری، خوشحال می‌شوم با شما در ارتباط باشم.",
@@ -353,7 +498,7 @@
     }
   },
   "footer": {
-    "copyright": "© 2024 محمدرضا عابدین‌پور. تمام حقوق محفوظ است.",
+    "copyright": "© 2025 محمدرضا عابدین‌پور. تمام حقوق محفوظ است.",
     "sourceCode": "سورس کد"
   },
   "aria": {
